create UI board feedback for sunk ships

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   --white-sea-color: rgb(78, 125, 255);
   --ship-miss-bg: rgba(254, 254, 255, 0.226);
   --ship-hit-bg: radial-gradient(red, rgb(251, 255, 0));
+  --ship-sunk-bg: radial-gradient(rgb(15, 15, 15), rgb(172, 172, 172));
 }
 
 * {
@@ -76,6 +77,10 @@ html {
 
 .cell.hit {
   background: var(--ship-hit-bg);
+}
+
+.cell.sunk {
+  background: var(--ship-sunk-bg);
 }
 
 .message-container {
