--- a/style.css
+++ b/style.css
@@ -48,22 +48,33 @@ html {
 }
 
 .gameboard-container {
-  /* width: 100%; */
-  display: flex;
-  flex-direction: row;
-  gap: 2rem;
+  display: grid;
 }
 
 .left-side-gameboard-container {
   grid-area: left-gameboard;
+  grid-template-columns: 1fr 4fr;
+  grid-template-areas:
+    'title title'
+    'list board';
 }
 
 .right-side-gameboard-container {
   grid-area: right-gameboard;
-  flex-direction: row-reverse;
+  grid-template-columns: 4fr 1fr;
+  grid-template-areas:
+    'title title'
+    'board list';
+}
+
+.player-title {
+  grid-area: title;
+  font-size: 3rem;
+  font-weight: normal;
 }
 
 .ship-list {
+  grid-area: list;
   width: 25%;
   display: flex;
   flex-direction: column;
@@ -80,6 +91,7 @@ html {
 }
 
 .gameboard {
+  grid-area: board;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
