--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ html {
 
 .gameboard-header {
   grid-area: header;
-  font-size: 3rem;
+  font-size: 5rem;
   display: grid;
   place-content: center;
   margin: 1rem;
@@ -71,13 +71,18 @@ html {
   grid-area: title;
   font-size: 3rem;
   font-weight: normal;
+  padding: 1.5rem;
+}
+
+.right-side-gameboard-container > .player-title {
+  text-align: right;
 }
 
 .ship-list {
   grid-area: list;
-  width: 25%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -138,6 +143,8 @@ html {
   height: 100%;
   display: grid;
   place-content: center;
+  border: 1px solid black;
+  border-radius: 0.5rem;
 }
 
 .message-text {
