--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ html {
 }
 
 /* TODO: change these selectors to not need side names */
-.left-side-gameboard-container {
+/* .left-side-gameboard-container { */
+.gameboard-container:nth-child(1) {
   grid-area: left-gameboard;
   grid-template-columns: 1fr 4fr;
   grid-template-areas:
@@ -60,7 +61,8 @@ html {
     'list board';
 }
 
-.right-side-gameboard-container {
+/* .right-side-gameboard-container { */
+.gameboard-container:nth-child(2) {
   grid-area: right-gameboard;
   grid-template-columns: 4fr 1fr;
   grid-template-areas:
@@ -75,7 +77,7 @@ html {
   padding: 1.5rem;
 }
 
-.right-side-gameboard-container > .player-title {
+.gameboard-container:nth-child(2) > .player-title {
   text-align: right;
 }
 
@@ -161,15 +163,46 @@ html {
   width: 100vw;
   height: 100vh;
   z-index: 1;
-  background: rgba(0, 0, 0, 0.842);
+  background: rgba(0, 0, 0, 0.75);
   display: grid;
   place-content: center;
 }
 
 .modal > .pop-up {
   background: #ddd;
-  width: 400px;
-  height: 100px;
+  /* width: 400px; */
+  /* height: 100px; */
   display: grid;
   place-content: center;
+  border-radius: 0.5rem;
+}
+
+.pop-up > .new-player-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    'label input'
+    'submit submit';
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.new-player-form > label {
+  grid-area: label;
+  font-size: 2rem;
+  align-self: center;
+}
+
+.new-player-form > input {
+  grid-area: input;
+  font-size: 2rem;
+  padding: 0.5rem;
+}
+
+.new-player-form > input[type='submit'] {
+  grid-area: submit;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  justify-self: center;
 }
