--- a/style.css
+++ b/style.css
@@ -21,6 +21,30 @@ html {
   width: 100%;
 }
 
+.start-screen {
+  width: 100%;
+  max-width: 80rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10rem;
+}
+
+.start-heading {
+  font-size: 8rem;
+  font-weight: normal;
+  display: grid;
+  place-content: center;
+  margin: 1rem;
+}
+
+.start-game-btn {
+  font-size: 3rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
 .game-container {
   width: 100%;
   max-width: 80rem;
