--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ html {
 .start-heading {
   font-size: 8rem;
   font-weight: normal;
+  text-transform: capitalize;
   display: grid;
   place-content: center;
   margin: 1rem;
@@ -41,6 +42,7 @@ html {
 
 .start-game-btn {
   font-size: 3rem;
+  text-transform: capitalize;
   padding: 1rem;
   border-radius: 0.5rem;
 }
