--- a/style.css
+++ b/style.css
@@ -222,3 +222,19 @@ html {
   font-size: 1.2rem;
   justify-self: center;
 }
+
+.pop-up > .game-over-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.game-over-container > button {
+  font-size: 3rem;
+  text-transform: capitalize;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
