--- a/style.css
+++ b/style.css
@@ -194,20 +194,14 @@ html {
 }
 
 .pop-up > .new-player-form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
-  grid-template-areas:
-    'type type'
-    'label input'
-    'submit submit';
-  row-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   padding: 2rem;
   width: 50rem;
 }
 
 .new-player-form > fieldset {
-  grid-area: type;
   display: flex;
   justify-content: space-evenly;
 }
@@ -228,31 +222,28 @@ html {
   font-size: 1.5rem;
 }
 
-.new-player-form > label {
-  grid-area: label;
+.new-player-form > .name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   font-size: 1.75rem;
+}
+
+.new-player-form > .name-container > input {
+  font-size: 1.75rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.new-player-form input[type='submit'] {
   align-self: center;
-  text-align: center;
 }
 
-.new-player-form > input {
-  grid-area: input;
-  font-size: 1.75rem;
-  padding: 0.5rem;
-}
-
-.new-player-form > label,
-.new-player-form > #player-name {
-  display: block;
-}
-
-.new-player-form > label.hidden,
-.new-player-form > #player-name.hidden {
+.new-player-form > .name-container.hidden {
   display: none;
 }
 
 .new-player-form > input[type='submit'] {
-  grid-area: submit;
   padding: 0.5rem;
   font-size: 1.2rem;
   justify-self: center;
