--- a/style.css
+++ b/style.css
@@ -62,6 +62,47 @@ html {
   grid-column-gap: 1rem;
 }
 
+.setup-container {
+  width: 100%;
+  max-width: 80rem;
+  margin: 0 auto;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr auto;
+  grid-template-areas:
+    'message message'
+    'ship-list setup-gameboard';
+  grid-column-gap: 1rem;
+}
+
+.setup-container > .message-container {
+  grid-area: message;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+.setup-container > .ship-placement-list {
+  grid-area: ship-list;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.ship-placement-list > p {
+  font-size: 3rem;
+}
+
+.setup-container > .gameboard {
+  grid-area: setup-gameboard;
+}
+
 .gameboard-header {
   grid-area: header;
   font-size: 5rem;
@@ -281,4 +322,16 @@ html {
   text-transform: capitalize;
   padding: 1rem;
   border-radius: 0.5rem;
+}
+
+.dragging {
+  font-size: 1.5rem;
+}
+
+.dragging.hidden {
+  display: none;
+}
+
+.dragged-over-cell {
+  background-color: yellow;
 }
