--- a/style.css
+++ b/style.css
@@ -69,17 +69,18 @@ html {
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto auto;
   grid-template-areas:
     'message message'
     'ship-list setup-gameboard';
   grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
 }
 
 .setup-container > .message-container {
   grid-area: message;
   width: 100%;
-  height: 100%;
+  padding: 2rem 0;
   display: grid;
   place-content: center;
   border: 1px solid black;
@@ -96,7 +97,7 @@ html {
 }
 
 .ship-placement-list > p {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .setup-container > .gameboard {
@@ -334,10 +335,6 @@ html {
 
 .occupied {
   background-color: grey;
-}
-
-.dragged-over-cell {
-  background-color: yellow;
 }
 
 .available {
