make ship list for gameboard setup stack at the top

--- a/style.css
+++ b/style.css
@@ -93,7 +93,9 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  gap: 2rem;
+  margin-top: 2rem;
 }
 
 .ship-placement-list > p {
