--- a/style.css
+++ b/style.css
@@ -71,10 +71,20 @@ html {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
   grid-template-areas:
+    'header header'
     'message message'
     'ship-list setup-gameboard';
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
+}
+
+.setup-container > .setup-header {
+  grid-area: header;
+  width: 100%;
+  padding: 2rem 0;
+  display: grid;
+  place-content: center;
+  font-size: 4rem;
 }
 
 .setup-container > .message-container {
